# SLAM-mapping-Robots

./: README.md
workspace/install/slam_robots/share/slam_robots/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/install/slam_robots/share/slam_robots/cmake/: slam_robotsConfig-version.cmake  slam_robotsConfig.cmake
workspace/install/slam_robots/share/slam_robots/config/: gazebo_params.yaml  mapper_params_online_async.yaml
workspace/install/slam_robots/share/slam_robots/environment/: ament_prefix_path.dsv  path.dsv
workspace/install/slam_robots/share/slam_robots/launch/: launch_sim.launch.py  robot_launch.launch.py  slam_robots_bot3.launch.py  slam_robots_main.launch.py  slam_robots_main_trial.launch.py  slam_robots_main_trial2.launch.py  slam_robots_main_turtlebot4.launch.py  slam_robots_main_turtlebot4_trial.launch.py
workspace/install/slam_robots/share/slam_robots/robot/: camera.xacro  depth_camera.xacro  face.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
workspace/install/slam_robots/share/slam_robots/robot/dummy/: CMakeLists.txt  README.md  package.xml
workspace/install/slam_robots/share/slam_robots/robot/dummy/config/: ball_tracker_params_robot.yaml  ball_tracker_params_sim.yaml  drive_bot.rviz  empty.yaml  gaz_ros2_ctl_use_sim.yaml  joystick.yaml  main.rviz  map.rviz  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml  view_bot.rviz
workspace/install/slam_robots/share/slam_robots/robot/dummy/launch/: ball_tracker.launch.py  camera.launch.py  joystick.launch.py  launch_robot.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py
workspace/install/slam_robots/share/slam_robots/robot/dummy/worlds/: empty.world  obstacles.world
workspace/install/slam_robots/share/slam_robots/robot/rviz/: drive_bot.rviz  final_config.rviz  robot_depth_camera.rviz  robot_lidar_visualize.rviz  slam_robot_mapping.rviz  test.rviz  view_robot.rviz
workspace/install/slam_robots/share/slam_robots/worlds/: world.sdf  world_classic.sdf  world_classic.world
workspace/install/slam_robots/share/slam_robots/worlds/dummy/: chair.sdf  model.sdf
workspace/install/slam_robots/share/slam_robots/worlds/models/freeCad design files/: chair.FCStd  chair.FCStd1  computer_table.FCStd  computer_table.FCStd1  corridor.FCStd  corridor.FCStd1  lecture_theater_platform.FCStd  table.FCStd  (+10 more)
workspace/src/slam_robots/: CMakeLists.txt  package.xml
workspace/src/slam_robots/config/: mapper_params_online_async.yaml
workspace/src/slam_robots/launch/: launch_sim.launch.py  robot_launch.launch.py  slam_robots_main.launch.py  slam_robots_main_trial2.launch.py  slam_robots_main_turtlebot4_trial.launch.py  slam_robots_turtlebots.launch.py
workspace/src/slam_robots/robot/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
workspace/src/slam_robots/robot/dummy/launch/: localization_launch.py  navigation_launch.py
workspace/src/slam_robots/robot/rviz/: robot_lidar_visualize.rviz  slam_robot_mapping.rviz  test.rviz  view_robot.rviz
workspace/src/slam_robots/src/: gazebo_middleware.cpp
workspace/src/slam_robots/worlds/: world.sdf  world_classic.sdf  world_classic.world
workspace/src/slam_robots/worlds/Gazebo/: world.sdf
workspace/src/slam_robots/worlds/Gazebo/models/freeCad design files/: chair.FCStd1  smart_board.FCStd  smart_board.FCStd1
workspace/src/slam_robots/worlds/Gazebo/models/freeCad_dae/: computer_table.dae  lecture_theater_platform.dae  smart_board.sdf  wall.dae
workspace/src/slam_robots/worlds/Gazebo/models/sub_worlds/: lab1.sdf  library.sdf  maincorridor.sdf
workspace/src/slam_robots/worlds/models/freeCad design files/: computer_table.FCStd  computer_table.FCStd1  corridor.FCStd  lecture_theater_platform.FCStd  stadium.FCStd1  wall.FCStd
workspace/src/slam_robots/worlds/models/freeCad_dae/: chair.dae  corridor.sdf  table.sdf  wall.sdf
workspace/src/slam_robots/worlds/models/fuel_models/Casual_female/: model.sdf
workspace/src/slam_robots/worlds/models/robots/: robot1.sdf  robot2.sdf  robot3.sdf  robot4.sdf  robot5.sdf  robot8.sdf
workspace/src/slam_robots/worlds/models/sub_worlds/: fourth_year.sdf  lab2.sdf  lab4.sdf  second_year.sdf  third_year.sdf
workspace/src/slam_robots/worlds/models_classic/basic_models/chair/: model.sdf
workspace/src/slam_robots/worlds/models_classic/basic_models/corridor/: model.config
workspace/src/slam_robots/worlds/models_classic/basic_models/lecture_theater_platform/: model.config  model.sdf
workspace/src/slam_robots/worlds/models_classic/basic_models/smart_board/: model.config  smart_board.dae
workspace/src/slam_robots/worlds/models_classic/basic_models/stadium/: model.sdf
workspace/src/slam_robots/worlds/models_classic/basic_models/table/: model.config
workspace/src/slam_robots/worlds/models_classic/basic_models/wall/: model.config
workspace/src/slam_robots/worlds/models_classic/basic_models/wall_with_window/: model.config
workspace/src/slam_robots/worlds/models_classic/freeCad design files/: wall.FCStd1  wall_with_window.FCStd  wall_with_window.FCStd1
workspace/src/slam_robots/worlds/models_classic/robots/: robot6.sdf  robot9.sdf
workspace/src/slam_robots/worlds/models_classic/sub_worlds/first_year/: model.config  model.sdf
workspace/src/slam_robots/worlds/models_classic/sub_worlds/lab1/: model.config  model.sdf
workspace/src/slam_robots/worlds/models_classic/sub_worlds/lab2/: model.config  model.sdf
workspace/src/slam_robots/worlds/models_classic/sub_worlds/lab3/: model.config
workspace/src/slam_robots/worlds/models_classic/sub_worlds/lab4/: model.config  model.sdf
workspace/src/slam_robots/worlds/models_classic/sub_worlds/maincorridor/: model.config
workspace/src/slam_robots/worlds/models_classic/sub_worlds/second_year/: model.config
workspace/src/slam_robots/worlds/models_classic/sub_worlds/third_year/: model.config  model.sdf
(+404 files in other folders)
